methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:32: error: Unmatched closing brace '}' ignored here
}
^